--- a/{{cookiecutter.app_name}}/docker-compose.yml
+++ b/{{cookiecutter.app_name}}/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     networks:
       - postgres-network
   
-  {% if cookiecutter.use_celery == "y" %}
-  {% if cookiecutter.broker == "redis" %}
+  {% if cookiecutter.celery_worker != "Do not use Celery" %}
+  {% if cookiecutter.celery_worker == "Redis" %}
   redis:
     image: "redis:alpine"
     hostname: redis
